--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ src="https://www.facebook.com/tr?id=524944937188741&ev=PageView&noscript=1"
             </div>
 
             <!-- Join Now and Subscribe Now Buttons -->
-            <a href="https://telegram.me/+QYIzFaG1c-82NjM1" class="join-now" target="_blank">Join Now on Telegram</a>
+            <a href="https://t.me/+HMJ_YfX17EFmMGI1" class="join-now" target="_blank">Join Now on Telegram</a>
 
             <h1>
 
@@ -67,7 +67,7 @@ src="https://www.facebook.com/tr?id=524944937188741&ev=PageView&noscript=1"
                 AUR APNI KISMAT BADLO💸
             
             </h1>
-            <a href="https://telegram.me/+QYIzFaG1c-82NjM1" class="subscribe-now" target="_blank">Subscribe Now</a>
+            <a href="https://t.me/+HMJ_YfX17EFmMGI1" class="subscribe-now" target="_blank">Subscribe Now</a>
         </header>
     </div>
     <script src="script.js"></script>
