--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ src="https://www.facebook.com/tr?id=524944937188741&ev=PageView&noscript=1"
     <div class="container">
         <header>
             <img src="Screenshot 2024-11-04 230622.png" alt="">
-            <h1>👑 RIKHIL 👑</h1>
+            <h1>👑 BIG DADDY 👑</h1>
             <p>🤑KISMAT BADAL DEGA YE BHAI🤑</p>
               
               <h4>Redirecting to channel in.....</h4>
