--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ src="https://www.facebook.com/tr?id=524944937188741&ev=PageView&noscript=1"
     <!-- Content Container -->
     <div class="container">
         <header>
-            <img src="Screenshot 2024-11-04 230622.png" alt="">
+            <img src="photo_2024-11-23_18-38-13.jpg" alt="">
             <h1>👑 BIG DADDY 👑</h1>
             <p>🤑KISMAT BADAL DEGA YE BHAI🤑</p>
               
